--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ nav{
     background-color: dodgerblue;
     position: fixed;
 
-
-
 }
 
 .menuIcon{
@@ -67,13 +65,20 @@ a{
     font-size: larger;
 }
 
+.spacer{
+    box-sizing: border-box;
+    height: 80px;
+    width: 100%;
+    /*background-color: whitesmoke;*/
+}
+
 .box{
     /*at first my apple pic was under the nav bar.  margin-top: 70px;
     this moved the nav bar down too. oh no!*/
 
     box-sizing: border-box;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
     align-items: center;
     justify-content: space-evenly;
     /*margin-top: 20px; this also affected the nav*/
@@ -103,7 +108,7 @@ a{
 
 @media screen and (max-width: 800px){
     body{
-        background-color: pink;
+        background-color: navajowhite;
     }
     .menu{
         position: fixed;
