--- a/style.css
+++ b/style.css
@@ -11,37 +11,9 @@ nav{
     /*filling up only the container that it is in.*/
     background-color: dodgerblue;
     position: fixed;
-
 }
 
-.menuIcon{
-    height: 100%;
-    width: 60px;
-    /*makes it fill it's container (the nav)'*/
-    display: flex;
-    flex-direction: column;
-    /*we are making a hamburger menu, so this will make it go */
-    /*vertical*/
-    /*justify-content: space-between;*/
-    justify-content: space-evenly;
-    align-items: center;
-    /*this makes the space between the layers of the hamburger*/
-    /*can u imagine using margin to do this?!!?!*/
 
-    /*now... how do I get the nav bar to go to the right?  There are two */
-    /*ways to do it*/
-    position: absolute;
-    right: 0;
-    /*but wait!!! the menu will now be behind the blue nav bc
-    it's taking this position relative to the body?.
-    he goes back up to nav and uses position fixed to
-    make it relate to nav*/
-
-    cursor: pointer;
-    /*this changes the mouse hovering style.  It let's the */
-    /*user know they can do something'*/
-
-}
 
 .bar{
     /*consider the total height and width (60px)*/
@@ -57,7 +29,25 @@ nav{
     /*changed the menuIcon justify-content to space evenly.*/
 }
 
+.menuIcon{
+    height: 100%;
+    width: 60px;
+    /*makes it fill it's container (the nav)'*/
 
+    position: absolute;
+    right: 0;
+    /*but wait!!! the menu will now be behind the blue nav bc
+    it's taking this position relative to the body?.
+    he goes back up to nav and uses position fixed to
+    make it relate to nav*/
+
+    cursor: pointer;
+    /*this changes the mouse hovering style.  It let's the */
+    /*user know they can do something'*/
+
+    display: none;
+
+}
 
 a{
     text-decoration: none;
@@ -78,7 +68,7 @@ a{
 
     box-sizing: border-box;
     display: flex;
-    /*flex-direction: column;*/
+    flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     /*margin-top: 20px; this also affected the nav*/
@@ -86,30 +76,28 @@ a{
 
 }
 
-.menu{
-    position: fixed;
-    top: 60px;
-    /*what does this do exactly?*/
-    right: 0px;
-    /*why -150?  to relate to the width.  it's neg bc*/
-    /*it's going to slide in from the right*/
-    width: 150px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    color: white;
-    background-color: lightskyblue;
-    min-height: 150px;
-    /*he did this last.  this slows it down the pop up a little bit*/
-    transition: 0.125s;
 
-}
 
 @media screen and (max-width: 800px){
     body{
         background-color: navajowhite;
     }
+
+.menuIcon{
+    display: flex;
+    flex-direction: column;
+    /*we are making a hamburger menu, so this will make it go */
+    /*vertical*/
+    /*justify-content: space-between;*/
+    justify-content: space-evenly;
+    align-items: center;
+    /*this makes the space between the layers of the hamburger*/
+    /*can u imagine using margin to do this?!!?!*/
+
+    /*now... how do I get the nav bar to go to the right?  There are two */
+    /*ways to do it*/
+}
+
     .menu{
         position: fixed;
         top: 60px;
